--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,46 @@
   --btnBgHover: #7a83a5;
 }
 
-.test {
-  border: 1px black solid;
-  padding: 1rem;
-  margin: 1rem;
-}
-
-.left {
-  padding-left: 1rem;
-}
-
-#display_weather {
-  border: 1px black solid;
-  margin: 1rem;
-  padding-left: 1rem;
+* {
+  box-sizing: border;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: var(--mainFont);
 }
 
+.test {
+  padding: 1rem;
+  color: white;
+  margin: 1rem;
+  background-color: var(--btnBg);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  border-radius: 1.5rem;
+}
+
+.center {
+  padding-left: 1rem;
+  text-align: center;
+}
+
+#display_weather {
+  margin: 1rem;
+  background-color: var(--btnBg);
+  color: white;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  border-radius: 1.5rem;
+}
+
 form {
+  padding-top: 2rem;
+  margin: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,4 +72,11 @@ form {
   text-align: center;
   text-decoration: none;
   cursor: pointer;
+}
+
+header {
+  background-color: var(--btnBg);
+  color: white;
+  padding: 1.5rem;
+  text-align: center;
 }
